# Rust-server

./: Cargo.toml
src/: main.rs  server.rs  simple_web_server.rs
src/server/: Cargo.toml  directory-listing-template.html  file_system.rs  httpcodes.rs  main.rs  mime.rs  socket.rs  socket_handler.rs  threadpool.rs  wsparser.rs
